<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_large"
    android:background="@color/app_grey_50_percent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/prompt_show_favourites"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:padding="@dimen/margin_small"
            android:text="@string/yes"
            android:textColor="@color/app_grey_80_percent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:padding="@dimen/margin_small"
            android:text="@string/no_thanks"
            android:textColor="@color/app_grey_80_percent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>