<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_large"
    android:background="@color/app_grey_50_percent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/prompt_influencer_code"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/edittext_background"
        android:cursorVisible="true"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="@dimen/margin_large"
        android:textCursorDrawable="@drawable/grey_cursor"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:padding="@dimen/margin_small"
            android:text="@string/submit"
            android:textColor="@color/app_grey_80_percent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:padding="@dimen/margin_small"
            android:text="@string/str_continue"
            android:textColor="@color/app_grey_80_percent"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>